Fixed overlap with image customization div and tags div. Issue 119

--- a/DotNetKicks/Incremental.Kick.Web.UI/Templates/Default/Template.css
+++ b/DotNetKicks/Incremental.Kick.Web.UI/Templates/Default/Template.css
@@ -88,7 +88,7 @@ input, select, textarea
 	background: #f7f7f7;
 	border-width: 1px;
 	padding-left: 20px; 
-	margin-top: -15px;
+	margin-top: 0px;
 }
 
 /* ================ spy ================== */
